# ControlLib-master--2-

ControlLib-master/: CMakeLists.txt  readme.md
ControlLib-master/demo/: demo2.cpp  demo3.cpp
ControlLib-master/gui/: CMakeLists.txt  QUICK_START.md  README.md  SUMMARY.md  USAGE_GUIDE.md  build.sh  example_integration.cpp
ControlLib-master/gui/include/: main_window.hpp  motor_data_manager.hpp  simple_chart.hpp  speed_monitor.hpp
ControlLib-master/gui/src/: main.cpp  main_window.cpp  motor_data_manager.cpp  simple_chart.cpp  speed_monitor.cpp
ControlLib-master/src/: can.cpp  dji_motor.cpp  pid.cpp
